--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,8 @@
     "lucide-react": "^0.511.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.59.0",
+    "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.6.2",
     "tailwindcss": "^4.1.8"
   },
