--- a/frontendMovil/package.json
+++ b/frontendMovil/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo-google-fonts/poppins": "^0.4.0",
     "@expo/vector-icons": "^14.1.0",
+    "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
@@ -19,6 +20,7 @@
     "expo-splash-screen": "^0.30.10",
     "expo-status-bar": "~2.2.3",
     "install": "^0.13.0",
+    "lucide-react": "^0.536.0",
     "npm": "^11.5.2",
     "react": "19.0.0",
     "react-native": "0.79.5",
