--- a/frontendMovil/package.json
+++ b/frontendMovil/package.json
@@ -13,6 +13,7 @@
     "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-community/blur": "^4.4.1",
+    "@react-native-community/datetimepicker": "^8.4.4",
     "@react-native-community/slider": "^4.5.7",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
