--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,8 @@
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^6.9.7",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "socket.io": "^4.7.2"
   },
   "devDependencies": {
