--- a/frontendMovil/package.json
+++ b/frontendMovil/package.json
@@ -28,7 +28,11 @@
     "npm": "^11.5.2",
     "react": "19.0.0",
     "react-native": "0.79.5",
-    "react-native-vector-icons": "^10.3.0"
+    "react-native-image-picker": "^8.2.1",
+    "react-native-permissions": "^5.4.2",
+    "react-native-push-notification": "^8.1.1",
+    "react-native-vector-icons": "^10.3.0",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
