--- a/frontendMovil/package.json
+++ b/frontendMovil/package.json
@@ -21,6 +21,7 @@
     "expo": "~53.0.20",
     "expo-blur": "^14.1.5",
     "expo-font": "~13.3.2",
+    "expo-linear-gradient": "^15.0.6",
     "expo-splash-screen": "^0.30.10",
     "expo-status-bar": "~2.2.3",
     "install": "^0.13.0",
@@ -31,6 +32,7 @@
     "react-native-image-picker": "^8.2.1",
     "react-native-permissions": "^5.4.2",
     "react-native-push-notification": "^8.1.1",
+    "react-native-safe-area-context": "^5.6.1",
     "react-native-vector-icons": "^10.3.0",
     "socket.io-client": "^4.8.1"
   },
