Modifiqué el backend, en el controller de productos personalizados, ya que el método de crear productos personalizados se tenía que adapatar tanto a la aplicación web como la móvil, además de que se diseño la pantalla con el formulario de finalización de personalización, junto con su respectivo hook

--- a/frontendMovil/package.json
+++ b/frontendMovil/package.json
@@ -21,7 +21,9 @@
     "expo": "~53.0.20",
     "expo-blur": "^14.1.5",
     "expo-font": "~13.3.2",
+    "expo-image-picker": "^17.0.8",
     "expo-linear-gradient": "^15.0.6",
+    "expo-permissions": "^14.4.0",
     "expo-splash-screen": "^0.30.10",
     "expo-status-bar": "~2.2.3",
     "install": "^0.13.0",
