--- a/frontendMovil/package.json
+++ b/frontendMovil/package.json
@@ -10,27 +10,27 @@
   },
   "dependencies": {
     "@expo-google-fonts/poppins": "^0.4.0",
-    "@expo/vector-icons": "^14.1.0",
-    "@react-native-async-storage/async-storage": "^2.1.2",
+    "@expo/vector-icons": "^15.0.2",
+    "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-community/blur": "^4.4.1",
     "@react-native-community/datetimepicker": "^8.4.4",
-    "@react-native-community/slider": "^4.5.7",
+    "@react-native-community/slider": "5.0.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
-    "expo": "~53.0.20",
-    "expo-blur": "^14.1.5",
-    "expo-font": "~13.3.2",
+    "expo": "^54.0.8",
+    "expo-blur": "~15.0.7",
+    "expo-font": "~14.0.8",
     "expo-image-picker": "^17.0.8",
-    "expo-linear-gradient": "^15.0.6",
+    "expo-linear-gradient": "~15.0.7",
     "expo-permissions": "^14.4.0",
-    "expo-splash-screen": "^0.30.10",
-    "expo-status-bar": "~2.2.3",
+    "expo-splash-screen": "~31.0.10",
+    "expo-status-bar": "~3.0.8",
     "install": "^0.13.0",
     "lucide-react": "^0.536.0",
     "npm": "^11.5.2",
-    "react": "19.0.0",
-    "react-native": "0.79.5",
+    "react": "19.1.0",
+    "react-native": "0.81.4",
     "react-native-image-picker": "^8.2.1",
     "react-native-permissions": "^5.4.2",
     "react-native-push-notification": "^8.1.1",
