--- a/frontendMovil/package.json
+++ b/frontendMovil/package.json
@@ -34,7 +34,8 @@
     "react-native-image-picker": "^8.2.1",
     "react-native-permissions": "^5.4.2",
     "react-native-push-notification": "^8.1.1",
-    "react-native-safe-area-context": "^5.6.1",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
     "react-native-vector-icons": "^10.3.0",
     "socket.io-client": "^4.8.1"
   },
