--- a/frontendMovil/package.json
+++ b/frontendMovil/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/native-stack": "^6.9.26",
     "expo": "^54.0.8",
     "expo-blur": "~15.0.7",
+    "expo-document-picker": "^14.0.7",
     "expo-font": "~14.0.8",
     "expo-image-picker": "^17.0.8",
     "expo-linear-gradient": "~15.0.7",
