--- a/frontendMovil/package.json
+++ b/frontendMovil/package.json
@@ -19,14 +19,17 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "expo": "^54.0.8",
+    "expo-av": "~16.0.7",
     "expo-blur": "~15.0.7",
     "expo-document-picker": "^14.0.7",
     "expo-font": "~14.0.8",
     "expo-image-picker": "^17.0.8",
     "expo-linear-gradient": "~15.0.7",
     "expo-permissions": "^14.4.0",
+    "expo-screen-orientation": "~9.0.7",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
+    "expo-video": "~3.0.11",
     "install": "^0.13.0",
     "lucide-react": "^0.536.0",
     "npm": "^11.5.2",
@@ -38,6 +41,7 @@
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-vector-icons": "^10.3.0",
+    "react-native-video": "^6.16.1",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
