--- a/frontendMovil/package.json
+++ b/frontendMovil/package.json
@@ -24,8 +24,9 @@
     "expo-blur": "~15.0.7",
     "expo-document-picker": "^14.0.7",
     "expo-font": "~14.0.8",
-    "expo-image-picker": "^17.0.8",
+    "expo-image-picker": "~17.0.8",
     "expo-linear-gradient": "~15.0.7",
+    "expo-media-library": "^18.2.0",
     "expo-permissions": "^14.4.0",
     "expo-screen-orientation": "~9.0.7",
     "expo-splash-screen": "~31.0.10",
