--- a/frontendMovil/package.json
+++ b/frontendMovil/package.json
@@ -38,6 +38,7 @@
     "react": "19.1.0",
     "react-native": "0.81.4",
     "react-native-image-picker": "^8.2.1",
+    "react-native-maps": "^1.20.1",
     "react-native-permissions": "^5.4.2",
     "react-native-push-notification": "^8.1.1",
     "react-native-safe-area-context": "~5.6.0",
