--- a/frontendMovil/package.json
+++ b/frontendMovil/package.json
@@ -14,33 +14,30 @@
     "@expo/vector-icons": "^15.0.2",
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-community/blur": "^4.4.1",
-    "@react-native-community/datetimepicker": "^8.4.5",
+    "@react-native-community/datetimepicker": "8.4.4",
     "@react-native-community/slider": "5.0.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
-    "expo": "^54.0.8",
+    "expo": "~54.0.10",
     "expo-av": "~16.0.7",
     "expo-blur": "~15.0.7",
+    "expo-camera": "~17.0.8",
+    "expo-contacts": "~15.0.8",
     "expo-document-picker": "^14.0.7",
     "expo-font": "~14.0.8",
     "expo-image-picker": "~17.0.8",
     "expo-linear-gradient": "~15.0.7",
-    "expo-media-library": "^18.2.0",
-    "expo-permissions": "^14.4.0",
+    "expo-location": "~19.0.7",
+    "expo-media-library": "~18.2.0",
     "expo-screen-orientation": "~9.0.7",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
     "expo-video": "~3.0.11",
-    "install": "^0.13.0",
     "lucide-react": "^0.536.0",
-    "npm": "^11.5.2",
     "react": "19.1.0",
     "react-native": "0.81.4",
-    "react-native-image-picker": "^8.2.1",
     "react-native-maps": "^1.20.1",
-    "react-native-permissions": "^5.4.2",
-    "react-native-push-notification": "^8.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-vector-icons": "^10.3.0",
