--- a/frontendMovil/package.json
+++ b/frontendMovil/package.json
@@ -42,6 +42,7 @@
     "react-native-screens": "~4.16.0",
     "react-native-vector-icons": "^10.3.0",
     "react-native-video": "^6.16.1",
+    "react-native-webview": "^13.16.0",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
